--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
             var frontendURL = '<%- frontendURL %>'
             if(JSON.parse(status)=="verified"){
                 if(confirm("Do you want to login?")){
-                    window.location.href = `${frontendURL}/login`;
+                    window.location.href = `${frontendURL}login`;
                 }
             }
         </script>
