--- a/views/verifyEmail.ejs
+++ b/views/verifyEmail.ejs
@@ -103,7 +103,7 @@
             var anchorTag = document.createElement("a");
 
             // Set the href attribute with the desired link
-            anchorTag.href = `${frontendURL}/login`;
+            anchorTag.href = `${frontendURL}login`;
 
             // Set the anchor tag text
             anchorTag.textContent = "Redirect to Login page";
