--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,24 +5,61 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reset Password</title>
+        <style>
+            .outer-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 80vh; 
+                }
+
+                .form-container {
+                border: 2px solid #ccc;
+                padding: 20px; 
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+                max-width: 300px; 
+                max-height: 200px;
+                width: 100%;
+                }
+
+               
+                .form-container input {
+                margin-bottom: 10px;
+                }
+
+        </style>
         <script>
             var status = '<%- JSON.stringify(status) %>';
             var frontendURL = '<%- frontendURL %>'
             if(JSON.parse(status)=="verified"){
-                if(confirm("Do you want to login?")){
-                    window.location.href = `${frontendURL}`;
-                }
+                //if(confirm("Do you want to login?")){
+                    window.location.href = `${frontendURL}/login`;
+                //}
             }
         </script>
+
     </head>
     <body>
-        <h1><%=email%></h1>
-        <form action="" method="post">
-            <input type="password" name="password" id="password" placeholder="password">
-            <br/>
-            <input type="password" name="confirmPassword" id="confirm-password" placeholder="confirmPassword">
-            <br />
-            <input type="submit" value="submit">
-        </form>
+        
+        <div class="outer-container">
+            <div class="form-container">
+                <h2>
+                    <%=email%>
+                </h2>
+                <form action="" method="post">
+                    <label for="password" class="form-label">
+                        Password
+                    </label>
+                    <input type="password" name="password" id="password" placeholder="Password">
+                    <br>
+                    <label for="password" class="form-label">
+                        Confirm-Password
+                    </label>
+                    <input type="password" name="confirmPassword" id="confirm-password" placeholder="Confirm Password">
+                    <br>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
     </body>
 </html>
