--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
             var frontendURL = '<%- frontendURL %>'
             if(JSON.parse(status)=="verified"){
                 //if(confirm("Do you want to login?")){
-                    window.location.href = `${frontendURL}/login`;
+                    window.location.href = `${frontendURL}login`;
                 //}
             }
         </script>
