--- a/views/verifyEmail.ejs
+++ b/views/verifyEmail.ejs
@@ -87,7 +87,7 @@ a{
             element.textContent = "Email Verified";
              var parentElement = document.getElementById("myDiv");
             var anchorTag = document.createElement("a");
-            anchorTag.href = `${frontendURL}/login`;
+            anchorTag.href = `${frontendURL}login`;
             anchorTag.textContent = "Redirect to Login page";
             parentElement.appendChild(anchorTag);
 
